--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -2,7 +2,7 @@ name: "Check PR Comments"
 on:
   pull_request:
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }}
 jobs:
   check_pr:
     runs-on: ubuntu-latest
