--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -11,8 +11,9 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: Talentia-Software-OSS/check-pr-comments-action@839beb361a46f4482cd149c8cdbef9c5b8f2bba5
         uses: Talentia-Software-OSS/check-pr-comments-action@v0.0.3
-        with:
+        env:
           GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }}
+        with:
           # This text must appear in a PR description
           comments-must-contain: '# Description'
  
