--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -7,6 +7,10 @@ jobs:
   check_pr:
     runs-on: ubuntu-latest
     steps:
+      - name: Print debug info
+        uses: hmarr/debug-action@v1.0.0
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: CheckPRComments
         # You may pin to the exact commit or the version.
         # uses: Talentia-Software-OSS/check-pr-comments-action@839beb361a46f4482cd149c8cdbef9c5b8f2bba5
