--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -2,7 +2,7 @@ name: "Check PR Comments"
 on:
   pull_request:
 env:
-  GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   check_pr:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
         # uses: Talentia-Software-OSS/check-pr-comments-action@839beb361a46f4482cd149c8cdbef9c5b8f2bba5
         uses: Talentia-Software-OSS/check-pr-comments-action@v0.0.3
         env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           # This text must appear in a PR description
           comments-must-contain: '# Description'
